--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             </div>
 
             <textarea placeholder="Address" name="" id="" cols="30" rows="10"></textarea>
-            <input type="submit" value="order now" class="btn">
+            <input type="submit" value="Order now" class="btn">
         </form>
     </div>
     </section>
