--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus, ducimus facere quod ratione vel laboriosam? Est, maxime rem. Itaque.</p>
         </div>
         <div class="box">
-            <img src="images/nguyen.jpg" alt="">
-            <h3>Phuong Nguyen</h3>
+            <img src="images/pic3.png" alt="">
+            <h3>Larson</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
